test/parser.d/invalid/module1.surc.bad
module module0 where
	two
	six       : Integer

two = 2
six = 6

main() = do
	print "a module"
